removed fast completion method

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -27,7 +27,7 @@
                 </p>
                 <p>
                     <span>🤖🌱</span>
-                    Évaluez le niveau de conformité d'écoconception de votre IA grâce à <a href="/" rel="noopener noreferrer">FrugalIA</a>.
+                    <mark><small>Coming soon</small></mark> Évaluez le niveau de conformité d'écoconception de votre IA grâce à <a href="/" rel="noopener noreferrer">FrugalIA</a>.
                 </p>
             </div>
         </section>
